--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.21.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-d3": "^0.4.0",
+    "react-d3-basic": "^1.6.11",
+    "react-d3-core": "^1.3.9",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
